update pagination config for plugin v1 again

--- a/_config.yml
+++ b/_config.yml
@@ -32,9 +32,10 @@ theme: minima
 plugins:
   - jekyll-feed
   - jekyll-mermaid
+  - jekyll-paginate
 
 paginate: 8
-paginate_path: "/worklog/pages:num/"
+paginate_path: "/worklog/page:num/"
 
 
 # Exclude from processing.
