--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,12 @@ before_install:
   - docker run -it --name="toolbox" topdevbox/static-website-toolbox /bin/bash -c "git clone $REPO; cd $REPODIR;bundle install;"
 
 script:
-  - cd /$REPODIR
+  - cd /"$REPODIR"
   - jekyll build
+
+notifications:
+  email:
+    recipients:
+      - $EMAIL1
+    on_success: change # default: change
+    on_failure: always # default: always
