fix cmd in travis.yml for auto deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,8 @@ services:
 
 before_install:
   - docker pull topdevbox/static-website-toolbox
-  - docker run -it --name="toolbox" topdevbox/static-website-toolbox /bin/bash -c "git clone $REPO; cd $REPODIR;bundle install;"
+  - docker run -it --name="toolbox" topdevbox/static-website-toolbox /bin/bash -c "git clone $REPO; cd $REPODIR;bundle install;jekyll build;"
 
-script:
-  - cd /"$REPODIR"
-  - jekyll build
 
 notifications:
   email:
