--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ script:
 notifications:
   email:
     recipients:
-      - ${EMAIL1}
+      - "${EMAIL1}"
     on_success: always # default: change
     on_failure: always # default: always
