--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ before_install:
 
 script:
   - ls
-  - export AWS_ACCESS_KEY_ID="${AWS_ACCESS_KEY_ID}"
-  - export AWS_SECRET_ACCESS_KEY="${AWS_SECRET_ACCESS_KEY}"
-  - export AWS_DEFAULT_REGION="${AWS_DEFAULT_REGION}"
+  - export AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+  - export AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+  - export AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
   - docker run -it governmentpaas/awscli aws s3 rm s3://good2all.com --recursive --output=table
   - docker run -it -v "${PWD}/_site:/site" governmentpaas/awscli aws s3 sync /site s3://good2all.com/ --output=table
   - docker ps -a
@@ -20,6 +20,6 @@ script:
 notifications:
   email:
     recipients:
-      - "${EMAIL1G}"
+      - inputx@gmail.com
     on_success: always # default: change
     on_failure: always # default: always
