--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ before_install:
   - docker pull topdevbox/awscli
   - docker run -it -v "${PWD}:/${REPODIR}" topdevbox/bundler /bin/sh -c "cd ${REPODIR};bundler install;/usr/bin/jekyll build"
 
-stages:
-  - name: deploy
+jobs:
+  include:
     if: branch = master
     script:
       - pwd
@@ -21,8 +21,6 @@ stages:
       - docker run -it -e AWS_ACCESS_KEY_ID="${AWS_ACCESS_KEY_ID}" -e AWS_SECRET_ACCESS_KEY="${AWS_SECRET_ACCESS_KEY}" -e AWS_DEFAULT_REGION="${AWS_DEFAULT_REGION}" topdevbox/awscli aws s3 rm s3://good2all.com --recursive --output=table
       - docker run -it -e AWS_ACCESS_KEY_ID="${AWS_ACCESS_KEY_ID}" -e AWS_SECRET_ACCESS_KEY="${AWS_SECRET_ACCESS_KEY}" -e AWS_DEFAULT_REGION="${AWS_DEFAULT_REGION}" -v "${PWD}/_site:/site" topdevbox/awscli aws s3 sync /site s3://good2all.com/ --output=table
       - docker ps -a
-stages:
-    - name: test
     if: branch = draft
     script:
       - pwd
