--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,11 @@ services:
   - docker
 
 before_install:
-  - docker pull topdevbox/bundler
+  - docker pull dockercraft/bundler
   
 
 install:
-  - docker run -it -v "${PWD}:/${REPODIR}" topdevbox/bundler /bin/sh -c "cd ${REPODIR};bundler install --jobs=4;/usr/bin/jekyll build"
+  - docker run -it -v "${PWD}:/${REPODIR}" dockercraft/bundler /bin/sh -c "cd ${REPODIR};bundler install --jobs=4;/usr/bin/jekyll build"
 
 
 jobs:
