--- a/.travis.yml
+++ b/.travis.yml
@@ -13,15 +13,15 @@ before_install:
   
 
 install:
-  - docker run -it -v "${PWD}:/${REPODIR}" dockercraft/bundler /bin/sh -c "cd ${REPODIR};bundler install --jobs=4;/usr/bin/jekyll build"
-
+  - docker run -it --rm -v "${PWD}:/${REPODIR}" dockercraft/bundler /bin/sh -c "cd ${REPODIR};bundler install --jobs=4;/usr/bin/jekyll build"
 
 jobs:
   include:
     - stage: deploy
       if: branch = master
       script:
-        - echo "DONE"
+        - docker run -it --rm -e ALGOLIA_API_KEY="${ALGOLIA_API_KEY}" -e ALGOLIA_INDEX_NAME=${ALGOLIA_INDEX_NAME} -v "${PWD}:/${REPODIR}" dockercraft/bundler /bin/sh -c "cd ${REPODIR};bundler install --jobs=4;/usr/bin/jekyll algolia"
+        - echo "algolia done"
     - stage: test
       if: branch = draft
       script:
