--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,14 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Goodays Worklog
+title: Liduan Worklog
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write down what's on your mind
 #baseurl: "/worklog" # the subpath of your site, e.g. /blog
 #url: "https://inputx.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "/"
-url: "https://good2all.com"
+url: "https://liduan.net"
 twitter_username: inputx
 github_username:  inputx
 
