--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,11 @@ jobs:
       script:
         - echo "DONE"
 
-before_deploy: "echo '-----------------> start to deploy' && rm -R public && mv _site public && ls -l"
+before_deploy: 
+  - echo '-----------------> prepare to deploy'
+  - rm -R public
+  - mv _site public
+  - ls -l
 
 deploy:
   provider: firebase
@@ -36,7 +40,8 @@ deploy:
   on:
     branch: features/firebase-hosting
 
-after_deploy: "echo '-----------------> finish deploy' && ls -l"
+after_deploy: 
+  - echo '-----------------> finish deploy'
 
 notifications:
   email:
