update ci cd, timezone config, before install

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ branches:
  - master
  - draft
 
-before_script:
+before_install:
   - echo '-----------------> setup timezone'
   - echo 'Australia/Melbourne' | sudo tee /etc/timezone
   - sudo dpkg-reconfigure --frontend noninteractive tzdata
