--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ cache:
   bundler: true
   directories:
    - /home/travis/.bundle/
+
 sudo: required
 
 branches:
@@ -17,6 +18,8 @@ branches:
 install:
   - bundle install --jobs=4
   - bundle exec jekyll build
+  - pwd
+  - ls
 
 jobs:
   include:
