--- a/_config.yml
+++ b/_config.yml
@@ -63,6 +63,8 @@ version:          2.1.0
 
 algolia:
   application_id: 'JW7LLYK6XP'
+  search_only_api_key: '5115d4cc0546975260c40df6afab87a0'
+  index_name: 'git_worklog'
 
 
 # Exclude from processing.
