update config for algolia change max size limit

--- a/_config.yml
+++ b/_config.yml
@@ -66,6 +66,7 @@ algolia:
   search_only_api_key: '5115d4cc0546975260c40df6afab87a0'
   index_name: 'git_worklog'
   nodes_to_index: 'p,blockquote,li,div.paragraph,a,highlight,code,td'
+  max_record_size: 30000
   files_to_exclude:
     - index.html
     - search.html
