--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,11 @@ branches:
  - master
  - draft
 
+before_install:
+  - nvm install 8.12
+
 install:
+  - npm install -g firebase-tools
   - bundle install --jobs=4
   - bundle exec jekyll build
 
@@ -26,7 +30,7 @@ jobs:
       script:
         - echo "DONE"
 
-before_deploy: 
+before_deploy:
   - echo '-----------------> prepare to deploy'
   - rm -R public
   - mv _site public
@@ -40,7 +44,7 @@ deploy:
   on:
     branch: master
 
-after_deploy: 
+after_deploy:
   - echo '-----------------> finish deploy'
 
 notifications:
