--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
         container_name: worklog-bundle
         entrypoint:
             - bundler
+            - exec
+            - jekyll
         working_dir: "/var/www"
         volumes:
             - .:/var/www
