--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ algolia:
   application_id: 'JW7LLYK6XP'
   search_only_api_key: '5115d4cc0546975260c40df6afab87a0'
   index_name: 'git_worklog'
-  nodes_to_index: 'p,blockquote,li,div.paragraph,a,highlight,td'
+  nodes_to_index: 'p,blockquote,li,div.paragraph,a,highlight,td,h1,h2,h3,h4'
   files_to_exclude:
     - index.html
     - search.html
