--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,11 @@ plugins:
   - jekyll-mermaid
   - jekyll-paginate
 
+defaults:
+  - scope:
+      path: "assets/images/kubernetes-02"
+    values:
+      image: true
 
 #paginate_path: "/worklog/page:num/"
 paginate_path: "/page:num/"
