pipeline install bundler

--- a/.github/workflows/gempush.yml
+++ b/.github/workflows/gempush.yml
@@ -17,6 +17,8 @@ jobs:
       with:
         version: 2.4.x
 
+    - name: before install (gem install bundler)
+      run: gem install bundler
     - name: install
       run: |
         bundle install --jobs=4
