--- a/.github/workflows/gempush.yml
+++ b/.github/workflows/gempush.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Set up Ruby 2.4
       uses: actions/setup-ruby@v1
       with:
-        version: 2.4.x
+        ruby-version: >= 2.4
 
     - name: before install (tools)
       run: |
