--- a/.github/workflows/gempush.yml
+++ b/.github/workflows/gempush.yml
@@ -19,6 +19,7 @@ jobs:
 
     - name: before install (tools)
       run: |
+        sudo apt-get update
         sudo apt-get install npm -y
         gem install bundler
         sudo npm install -g firebase-tools
