--- a/.github/workflows/gempush.yml
+++ b/.github/workflows/gempush.yml
@@ -20,6 +20,7 @@ jobs:
     - name: before install (tools)
       run: |
         sudo apt-get update
+        sudo apt-get install nodejs-dev node-gyp libssl1.0-dev
         sudo apt-get install npm -y
         gem install bundler
         sudo npm install -g firebase-tools
