--- a/.github/workflows/gempush.yml
+++ b/.github/workflows/gempush.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: Set up Ruby 2.4
-      uses: actions/setup-ruby@v2
+      uses: ruby/setup-ruby@v1
       with:
         ruby-version: ~2.4
 
