--- a/.github/workflows/gempush.yml
+++ b/.github/workflows/gempush.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Set up Ruby 2.4
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: ~2.4
+        ruby-version: 2.4
 
     - name: before install (tools)
       run: |
